--- a/install-scripts/provisioning/inventory.ini
+++ b/install-scripts/provisioning/inventory.ini
@@ -3,8 +3,8 @@ ansible_connection=ssh
 ansible_user=lucas
 
 [cloud]
-34.146.56.210
-34.84.99.17
+ecob-k3s-master-0 ansible-host=34.146.56.210
+ecob-mongodb ansible-host=34.84.99.17
 
 [edge]
 34.140.85.146
