--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,7 +46,9 @@ name: 'Install Edge Orchestrator'
 
 on:
   workflow_dispatch:
-    
+  push:
+    paths:
+      - '.github/workflows/terraform.yml'
 jobs:
   terraform:
     name: 'Terraform'
