Change prefix, fix worker template generation

--- a/install-scripts/hosts.ini
+++ b/install-scripts/hosts.ini
@@ -1,31 +1,31 @@
-ecob-k3s-master-0 ansible_user=ubuntu ansible_host=34.146.56.210 ip=10.146.0.15 etcd_member_name=etcd1
-ecob-mongodb ansible_user=ubuntu ansible_host=34.84.99.17 ip=10.146.0.14 etcd_member_name=etcd2
-ecob-k3s-worker-0 ansible_user=ubuntu ansible_host=34.140.85.146 ip=10.132.0.11
-ecob-k3s-worker-1 ansible_user=ubuntu ansible_host=34.79.73.52 ip=10.132.0.10
+k3s-master-0 ansible_user=ubuntu ansible_host=34.146.141.246 ip=10.146.0.16 etcd_member_name=etcd1
+k3s-mongodb ansible_user=ubuntu ansible_host=34.146.219.194 ip=10.146.0.17 etcd_member_name=etcd2
+k3s-worker-0 ansible_user=ubuntu ansible_host=34.78.165.199 ip=10.132.0.12
+k3s-worker-1 ansible_user=ubuntu ansible_host=34.140.109.94 ip=10.132.0.13
 
 [cloud]
-ecob-k3s-master-0
-ecob-mongodb
+k3s-master-0
+k3s-mongodb
 
 [cloud:vars]
 supplementary_addresses_in_ssl_keys = [ 'null' ]
 kubernetes_role=master
 
 [etcd]
-ecob-k3s-master-0
-ecob-mongodb
+k3s-master-0
+k3s-mongodb
 
 [edge]
-ecob-k3s-worker-0
-ecob-k3s-worker-1
+k3s-worker-0
+k3s-worker-1
 
 [edge:vars]
 supplementary_addresses_in_ssl_keys = [ 'null' ]
 kubernetes_role=edge
 
 [etcd]
-ecob-k3s-master-0
-ecob-mongodb
+k3s-master-0
+k3s-mongodb
 
 [k8s-cluster:children]
 cloud
