--- a/install-scripts/provisioning/inventory.ini
+++ b/install-scripts/provisioning/inventory.ini
@@ -3,12 +3,12 @@ ansible_connection=ssh
 ansible_user=lucas
 
 [cloud]
-ecob-k3s-master-0 ansible-host=34.146.56.210
-ecob-mongodb ansible-host=34.84.99.17
+k3s-master-0 ansible-host=34.146.141.246
+k3s-mongodb ansible-host=34.146.219.194
 
 [edge]
-34.140.85.146
-34.79.73.52
+k3s-worker-0 ansible-host=34.78.165.199
+k3s-worker-1 ansible-host=34.140.109.94
 
 [cloud:vars]
 kubernetes_role=master
