--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -141,9 +141,11 @@ jobs:
 
     - name: install ansible role
       working-directory: ./install-scripts/provisioning
-      run: | 
-        ls ./install-scripts/provisioning/inventory.ini
-        cat ./install-scripts/provisioning/inventory.ini
+      run: ls inventory.ini
+
+    - name: install ansible role
+      working-directory: ./install-scripts/provisioning
+      run: cat inventory.ini
       
     - name: Run playbook
       uses: dawidd6/action-ansible-playbook@v2
