--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -147,6 +147,15 @@ jobs:
       working-directory: ./install-scripts/provisioning
       run: cat inventory.ini
       
+    - name: create file with ssh key
+      run: |
+        mkdir ~/.ssh
+        touch ~/.ssh/id_rsa.pub
+        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa.pub 
+
+    - name: run ansible playbook
+      run: ansible-playbook install_mongodb.yml -i ./install-scripts/provisioning/inventory.ini
+
     - name: Run playbook
       uses: dawidd6/action-ansible-playbook@v2
       with:
