--- a/install-scripts/provisioning/inventory.ini
+++ b/install-scripts/provisioning/inventory.ini
@@ -1,14 +1,15 @@
 [all:vars]
 ansible_connection=ssh
-ansible_user=lucas
+ansible_user=deploy_git
+ansible_ssh_private_key_file=~/.ssh/deploy_eco
 
 [cloud]
-microk8s-master-0 ansible-host=34.146.141.246
-microk8s-mongodb ansible-host=34.146.219.194
+microk8s-master-0 ansible_host=34.146.156.156
+microk8s-mongodb ansible_host=34.146.141.246
 
 [edge]
-microk8s-worker-0 ansible-host=34.78.165.199
-microk8s-worker-1 ansible-host=34.140.109.94
+microk8s-worker-0 ansible_host=34.79.161.247
+microk8s-worker-1 ansible_host=34.140.85.146
 
 [cloud:vars]
 kubernetes_role=master
