--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -225,13 +225,15 @@ jobs:
         name: my-artifact
         path: tmp
 
-    - run: ls tmp
+    - run: ls -la  tmp
+
+    - run: rm -rf tmp/.terraform
 
     - name: terraform init
       working-directory: tmp
       run: terraform init
 
-    - run: ls tmp
+    - run: ls -la tmp
     
     - name: destroy cluster state
       working-directory: tmp
