--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -248,5 +248,5 @@ jobs:
     
     - name: destroy cluster state
       working-directory: tmp
-      run: terraform destroy -var-file tfvars.json -state cluster.tfstate -auto-approve
+      run: terraform destroy -var-file tfvars.json -auto-approve
 
