--- a/benchmarking/requirements.txt
+++ b/benchmarking/requirements.txt
@@ -1,13 +1,21 @@
+bcrypt==3.2.0
+cffi==1.14.5
+cryptography==3.4.7
 cycler==0.10.0
 kiwisolver==1.3.1
 matplotlib==3.4.2
 numpy==1.21.0
 pandas==1.2.5
+paramiko==2.7.2
 Pillow==8.2.0
+pycparser==2.20
 pymongo==3.11.4
+PyNaCl==1.4.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 scipy==1.7.0
 seaborn==0.11.1
 six==1.16.0
+ssh-pymongo==1.0.4
+sshtunnel==0.4.0
