--- a/dummy/kubernetes/image-processing-cloud/image-processing-cloud-deployment.yaml
+++ b/dummy/kubernetes/image-processing-cloud/image-processing-cloud-deployment.yaml
@@ -23,6 +23,16 @@ spec:
       labels:
         io.kompose.service: image-processing-cloud
     spec:
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            preference:
+              matchExpressions:
+              - key: node
+                operator: In
+                values:
+                - cloud1
       containers:
         - env:
             - name: IMAGE_CLOUD_PORT
