--- a/dummy/kubernetes/image-processing-edge/image-processing-edge-deployment.yaml
+++ b/dummy/kubernetes/image-processing-edge/image-processing-edge-deployment.yaml
@@ -23,6 +23,16 @@ spec:
       labels:
         io.kompose.service: image-processing-edge
     spec:
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            preference:
+              matchExpressions:
+              - key: node
+                operator: In
+                values:
+                - edge1
       containers:
         - env:
             - name: IMAGE_CLOUD_IP
