--- a/dummy/kubernetes/sensor-cw-depl.yml
+++ b/dummy/kubernetes/sensor-cw-depl.yml
@@ -26,6 +26,16 @@ spec:
       labels:
         app: sensor-cw
     spec:
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            preference:
+              matchExpressions:
+              - key: node
+                operator: In
+                values:
+                - cloud1
       containers:
         - name: sensor-cw
           image: ecobench/sensor-cloud:latest
