--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,9 +49,10 @@ on:
   push:
     paths:
       - '.github/workflows/terraform.yml'
+
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Provision Environment (Terraform)'
     runs-on: ubuntu-latest
     environment: production
 
@@ -73,12 +74,12 @@ jobs:
     - name: Create Service Account Json File
       working-directory: ./install-scripts/provisioning
       run: touch service-account.json
-      
+
     # Copy Service Account Secret to provisioning Directory
     - name: Copy Secret to Service Account Json File
       working-directory: ./install-scripts/provisioning
       run: echo '${{ secrets.GCE_SERVICE_ACCOUNT }}' >> service-account.json
-      
+
     - name: Format Terraform Files
       working-directory: ./install-scripts/provisioning
       run: terraform fmt
@@ -98,11 +99,11 @@ jobs:
     - name: Terraform Apply
       working-directory: ./install-scripts/provisioning
       run: terraform apply -var-file tfvars.json -auto-approve
-  
+
     - name: check inventory file
       working-directory: ./install-scripts/provisioning
-      run: cat inventory.ini      
-    
+      run: cat inventory.ini
+
 #    - name: Terraform Destroy
 #      working-directory: ./install-scripts/provisioning
 #      run: ./destroy.sh
@@ -111,8 +112,8 @@ jobs:
       with:
         name: my-artifact
         path: ./install-scripts/provisioning
-    
-    
+
+
   mongodb:
     name: 'mongodb'
     needs: terraform
@@ -135,12 +136,12 @@ jobs:
         path: tmp
 
     - run: cat tmp/inventory.ini
-      
+
     - name: create file with ssh key
       run: |
         mkdir ~/.ssh
         touch ~/.ssh/id_rsa
-        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa 
+        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
 
     - run: ansible-galaxy install undergreen.mongodb
@@ -149,120 +150,173 @@ jobs:
       working-directory: ./benchmarking
       run: ansible-playbook install_mongodb.yml -i ../tmp/inventory.ini
 
-  mikrok8s:
-    name: 'mikrok8s'
-    needs: terraform
-    runs-on: ubuntu-latest
-    environment: production
+#  mikrok8s:
+#    name: 'mikrok8s'
+#    needs: terraform
+#    runs-on: ubuntu-latest
+#    environment: production
+#
+#    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+#    defaults:
+#      run:
+#        shell: bash
+#
+#    steps:
+#    # Checkout the repository to the GitHub Actions runner
+#    - name: Checkout
+#      uses: actions/checkout@v2
+#
+#    - uses: actions/download-artifact@master
+#      with:
+#        name: my-artifact
+#        path: tmp
+#
+#    - run: cp tmp/inventory.ini install-scripts/microk8s/ansible/
+#
+#    - run: cat tmp/inventory.ini
+#
+#    - name: create file with ssh key
+#      run: |
+#        mkdir ~/.ssh
+#        touch ~/.ssh/id_rsa
+#        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+#        chmod 600 ~/.ssh/id_rsa
+#
+#    - name: run ansible playbook
+#      working-directory: install-scripts/microk8s/ansible
+#      run: ansible-playbook cluster_install.yml -i inventory.ini
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+#  deploy-applications:
+#    name: 'deploy-applications'
+#    needs:
+#      - mikrok8s
+#      - mongodb
+#    runs-on: ubuntu-latest
+#    environment: production
+#
+#    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+#    defaults:
+#      run:
+#        shell: bash
+#
+#    steps:
+#    # Checkout the repository to the GitHub Actions runner
+#    - name: Checkout
+#      uses: actions/checkout@v2
+#
+#    - uses: actions/download-artifact@master
+#      with:
+#        name: my-artifact
+#        path: tmp
+#
+#    - run: cp tmp/inventory.ini install-scripts/microk8s/ansible/
+#
+#    - run: cat tmp/inventory.ini
+#
+#    - name: create file with ssh key
+#      run: |
+#        mkdir ~/.ssh
+#        touch ~/.ssh/id_rsa
+#        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+#        chmod 600 ~/.ssh/id_rsa
+#
+#    - name: run ansible playbook
+#      working-directory: install-scripts/microk8s/ansible
+#      run: ansible-playbook apply_applications.yml -i inventory.ini
+
+#  run-benchmark:
+#    name: 'run-benchmark'
+#    needs:
+#      - deploy-applications
+#    runs-on: ubuntu-latest
+#    environment: production
+#
+#    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+#    defaults:
+#      run:
+#        shell: bash
+#
+#    steps:
+#    # Checkout the repository to the GitHub Actions runner
+#    - name: Checkout
+#      uses: actions/checkout@v2
+#
+#    - uses: actions/download-artifact@master
+#      with:
+#        name: my-artifact
+#        path: tmp
+#
+#    - run: cp tmp/inventory.ini benchmarking/
+#
+#    - run: cat tmp/inventory.ini
+#
+#    - name: create file with ssh key
+#      run: |
+#        mkdir ~/.ssh
+#        touch ~/.ssh/id_rsa
+#        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+#        chmod 600 ~/.ssh/id_rsa
+#
+#    - name: run ansible playbook
+#      working-directory: benchmarking
+#      run: ansible-playbook script.yml -i inventory.ini
+
+
+  evaluate:
+    name: 'Evaluate and Plot'
+    needs:
+      - run-benchmark
+    environment: production
+    runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash
+        working-directory: ./benchmark
 
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v2
 
-    - uses: actions/download-artifact@master
-      with:
-        name: my-artifact
-        path: tmp
+      - uses: actions/download-artifact@master
+        with:
+          name: my-artifact
+          path: /tmp
 
-    - run: cp tmp/inventory.ini install-scripts/microk8s/ansible/
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - run: cat tmp/inventory.ini
+      - run: cp /tmp/inventory.ini benchmarking
 
-    - name: create file with ssh key
-      run: |
-        mkdir ~/.ssh
-        touch ~/.ssh/id_rsa
-        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+      - uses: actions/checkout@v2
+                - name: Set up Python
+                uses: actions/setup-python@v2
+                with:
+                  python-version: '3.x'
 
-    - name: run ansible playbook
-      working-directory: install-scripts/microk8s/ansible
-      run: ansible-playbook cluster_install.yml -i inventory.ini
+      - name: Install dependencies
+        working-directory: benchmark
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-  deploy-applications:
-    name: 'deploy-applications'
-    needs: 
-      - mikrok8s
-      - mongodb
-    runs-on: ubuntu-latest
-    environment: production
+      - name: Set ENV Variables
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
+      - name: Execute Script
+        working-directory: benchmark
+        run: python main.py
+        env:
+          SERVER_USER: "ubuntu" # as defined during terraform provisioning
+          SSH_KEY: ${{ secrets.PUBLIC_KEY }}
+          MONGODB_IP:  grep -E 'mongodb' /tmp/inventory.ini |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}'
 
-    steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Archive Plots
+        uses: actions/upload-artifact@v2
+        with:
+          name: plots
+          path: ./results
 
-    - uses: actions/download-artifact@master
-      with:
-        name: my-artifact
-        path: tmp
-
-    - run: cp tmp/inventory.ini install-scripts/microk8s/ansible/
-
-    - run: cat tmp/inventory.ini
-    
-    - name: create file with ssh key
-      run: |
-        mkdir ~/.ssh
-        touch ~/.ssh/id_rsa
-        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-
-    - name: run ansible playbook
-      working-directory: install-scripts/microk8s/ansible
-      run: ansible-playbook apply_applications.yml -i inventory.ini
-
-  run-benchmark:
-    name: 'run-benchmark'
-    needs: 
-      - deploy-applications
-    runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - uses: actions/download-artifact@master
-      with:
-        name: my-artifact
-        path: tmp
-   
-    - run: cp tmp/inventory.ini benchmarking/
-
-    - run: cat tmp/inventory.ini
-        
-    - name: create file with ssh key
-      run: |
-        mkdir ~/.ssh
-        touch ~/.ssh/id_rsa
-        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-
-    - name: run ansible playbook
-      working-directory: benchmarking
-      run: ansible-playbook script.yml -i inventory.ini
 
   destroy:
-    name: 'destroy'
-    needs: 
+    name: 'Destroy Environment (Terraform)'
+    needs:
       - terraform
       - run-benchmark
     if: always()
@@ -300,7 +354,7 @@ jobs:
       run: terraform init
 
     - run: ls -la tmp
-    
+
     - name: destroy cluster state
       working-directory: tmp
       run: terraform destroy -var-file tfvars.json -auto-approve
