Remove job dependency for debugging

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -264,8 +264,8 @@ jobs:
 
   evaluate:
     name: 'Evaluate and Plot'
-    needs:
-      - run-benchmark
+    # needs:
+     #  - run-benchmark
     environment: production
     runs-on: ubuntu-latest
     defaults:
