--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -289,14 +289,15 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        working-directory: benchmark
         run: |
-          python -m pip install --upgrade pip
+          ls -la
+          python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
 
       - name: Execute Script
-        working-directory: benchmark
-        run: python main.py
+        run: |
+          cat | grep -E 'mongodb' /tmp/inventory.ini |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}'
+          python main.py
         env:
           SERVER_USER: "ubuntu" # as defined during terraform provisioning
           SSH_KEY: ${{ secrets.PUBLIC_KEY }}
