--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -260,8 +260,8 @@ jobs:
 
   evaluate:
     name: 'Evaluate and Plot'
-#    needs:
-#      - mongodb
+    needs:
+      - terrform
     environment: production
     runs-on: ubuntu-latest
     defaults:
@@ -287,7 +287,6 @@ jobs:
       - run: ls -la  .
 
       - name: Install dependencies
-        working-directory: benchmark
         run: |
           python -m pip install --upgrade pip setuptools wheel
 
