Debugging python dependency install

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -261,7 +261,7 @@ jobs:
   evaluate:
     name: 'Evaluate and Plot'
     needs:
-      - terrform
+      - terraform
     environment: production
     runs-on: ubuntu-latest
     defaults:
