--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,7 +52,7 @@ on:
 
 jobs:
   terraform:
-    name: 'Provision Environment (Terraform)'
+    name: 'Provision Environment'
     runs-on: ubuntu-latest
     environment: production
 
@@ -111,7 +111,7 @@ jobs:
 #
 #
 #  mongodb:
-#    name: 'mongodb'
+#    name: 'Install MongoDB'
 #    needs: terraform
 #    runs-on: ubuntu-latest
 #    environment: production
@@ -147,7 +147,7 @@ jobs:
 #      run: ansible-playbook install_mongodb.yml -i ../tmp/inventory.ini
 
 #  mikrok8s:
-#    name: 'mikrok8s'
+#    name: 'Install mikrok8s'
 #    needs: terraform
 #    runs-on: ubuntu-latest
 #    environment: production
@@ -183,7 +183,7 @@ jobs:
 #      run: ansible-playbook cluster_install.yml -i inventory.ini
 
 #  deploy-applications:
-#    name: 'deploy-applications'
+#    name: 'Deploy Applications'
 #    needs:
 #      - mikrok8s
 #      - mongodb
@@ -221,7 +221,7 @@ jobs:
 #      run: ansible-playbook apply_applications.yml -i inventory.ini
 
 #  run-benchmark:
-#    name: 'run-benchmark'
+#    name: 'Benchmark'
 #    needs:
 #      - deploy-applications
 #    runs-on: ubuntu-latest
@@ -264,9 +264,6 @@ jobs:
       - terraform
     environment: production
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./benchmark
 
     steps:
 
@@ -284,15 +281,16 @@ jobs:
         with:
           python-version: '3.x'
 
-      - run: ls -la  .
+      - run: ls -la  ./benchmark
 
       - name: Install dependencies
+        working-directory: ./benchmark
         run: |
           python -m pip install --upgrade pip setuptools wheel
-
-        #pip install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Execute Script
+        working-directory: ./benchmark
         run: |
           cat | grep -E 'mongodb' /tmp/inventory.ini |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}'
           python main.py
@@ -305,11 +303,11 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: plots
-          path: ./results
+          path: ./benchmark/results
 
 
   destroy:
-    name: 'Destroy Environment (Terraform)'
+    name: 'Destroy Environment'
     needs:
       - terraform
       - evaluate
