Debugging python dependency install

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -281,7 +281,7 @@ jobs:
         with:
           python-version: '3.x'
 
-      - run: ls -la  ./benchmark
+      - run: ls -la  .
 
       - name: Install dependencies
         working-directory: ./benchmark
