--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -284,13 +284,13 @@ jobs:
       - run: ls -la  .
 
       - name: Install dependencies
-        working-directory: ./benchmark
+        working-directory: ./benchmarking
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
 
       - name: Execute Script
-        working-directory: ./benchmark
+        working-directory: ./benchmarking
         run: |
           cat | grep -E 'mongodb' /tmp/inventory.ini |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}'
           python main.py
@@ -303,7 +303,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: plots
-          path: ./benchmark/results
+          path: ./benchmarking/results
 
 
   destroy:
