--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -272,6 +272,13 @@ jobs:
           name: my-artifact
           path: /tmp
 
+      # Move Public Key for current User
+      - name: Create Public Key
+        run: |
+          mkdir ~/.ssh
+          touch ~/.ssh/id_rsa.pub
+          echo '${{ secrets.PUBLIC_KEY }}' >> ~/.ssh/id_rsa.pub
+
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v2
@@ -287,8 +294,6 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
 
-      - run: cat | grep -E 'mongodb' /tmp/inventory.ini |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}'
-
       - name: Set env
         run: echo "MONGODB_IP=$(grep -E 'mongodb' /tmp/inventory.ini |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')" >> $GITHUB_ENV
 
@@ -298,7 +303,7 @@ jobs:
           python main.py
         env:
           SERVER_USER: "ubuntu" # as defined during terraform provisioning
-          SSH_KEY: ${{ secrets.PUBLIC_KEY }}
+          SSH_KEY: "~/.ssh/id_rsa.pub"
 
       - name: Archive Plots
         uses: actions/upload-artifact@v2
