--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -297,13 +297,15 @@ jobs:
       - name: Set env
         run: echo "MONGODB_IP=$(grep -E 'mongodb' /tmp/inventory.ini |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')" >> $GITHUB_ENV
 
+      - name: Set SSH_KEY Env
+        run: echo "SSH_KEY=$(echo $HOME/.ssh/id_rsa.pub)" >> $GITHUB_ENV
+
       - name: Execute Script
         working-directory: ./benchmarking
         run: |
           python main.py
         env:
           SERVER_USER: "ubuntu" # as defined during terraform provisioning
-          SSH_KEY: "~/.ssh/id_rsa.pub"
 
       - name: Archive Plots
         uses: actions/upload-artifact@v2
