--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -110,41 +110,41 @@ jobs:
         path: ./install-scripts/provisioning
 
 
-#  mongodb:
-#    name: 'Install MongoDB'
-#    needs: terraform
-#    runs-on: ubuntu-latest
-#    environment: production
-#
-#    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-#    defaults:
-#      run:
-#        shell: bash
-#
-#    steps:
-#    # Checkout the repository to the GitHub Actions runner
-#    - name: Checkout
-#      uses: actions/checkout@v2
-#
-#    - uses: actions/download-artifact@master
-#      with:
-#        name: my-artifact
-#        path: tmp
-#
-#    - run: cat tmp/inventory.ini
-#
-#    - name: create file with ssh key
-#      run: |
-#        mkdir ~/.ssh
-#        touch ~/.ssh/id_rsa
-#        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-#        chmod 600 ~/.ssh/id_rsa
-#
-#    - run: ansible-galaxy install undergreen.mongodb
-#
-#    - name: run ansible playbook
-#      working-directory: ./benchmarking
-#      run: ansible-playbook install_mongodb.yml -i ../tmp/inventory.ini
+  mongodb:
+    name: 'Install MongoDB'
+    needs: terraform
+    runs-on: ubuntu-latest
+    environment: production
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - uses: actions/download-artifact@master
+      with:
+        name: my-artifact
+        path: tmp
+
+    - run: cat tmp/inventory.ini
+
+    - name: create file with ssh key
+      run: |
+        mkdir ~/.ssh
+        touch ~/.ssh/id_rsa
+        echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+
+    - run: ansible-galaxy install undergreen.mongodb
+
+    - name: run ansible playbook
+      working-directory: ./benchmarking
+      run: ansible-playbook install_mongodb.yml -i ../tmp/inventory.ini
 
 #  mikrok8s:
 #    name: 'Install mikrok8s'
@@ -261,7 +261,7 @@ jobs:
   evaluate:
     name: 'Evaluate and Plot'
     needs:
-      - terraform
+      - mongodb
     environment: production
     runs-on: ubuntu-latest
 
@@ -293,6 +293,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
+
+      - run: |
+          cd ~/.ssh
+          pwd
 
       - name: Set env
         run: echo "MONGODB_IP=$(grep -E 'mongodb' /tmp/inventory.ini |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')" >> $GITHUB_ENV
