--- a/benchmarking/script.yml
+++ b/benchmarking/script.yml
@@ -4,18 +4,20 @@
       msg: "Mongo DB IP {{hostvars[inventory_hostname]['ansible_default_ipv4']['address']}}"
 
 - hosts: all
-  become: true
+  become: yes
+  become_method: enable
   tasks:
   - name: install iotop
     apt:
       name: iotop
       state: present
+      update_cache: yes
   - name: Install mongo client
     shell: |
-      sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
+      apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
       echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
-      sudo apt-get update
-      sudo apt-get install -y mongodb-org-shell
+      apt-get update
+      apt-get install -y mongodb-org-shell
   - name: Create a directory if it does not exist
     file:
       path: /etc/scripts
