--- a/install-scripts/provisioning/inventory.ini
+++ b/install-scripts/provisioning/inventory.ini
@@ -1,15 +1,36 @@
 [all:vars]
 ansible_connection=ssh
 ansible_user=deploy_git
-ansible_ssh_private_key_file=~/.ssh/deploy_eco
+ansible_ssh_private_key_file=~/.ssh/id_rsa
 
 [cloud]
-microk8s-master-0 ansible_host=34.146.156.156
-microk8s-mongodb ansible_host=34.146.141.246
+k3s-master ansible_host=34.146.56.210
+microk8s-master ansible_host=34.146.141.246
+mongodb ansible_host=34.146.208.60
+openyurt-master ansible_host=34.146.219.194
 
 [edge]
+k3s-worker-0 ansible_host=34.142.45.109
+k3s-worker-1 ansible_host=34.142.79.184
 microk8s-worker-0 ansible_host=34.79.161.247
-microk8s-worker-1 ansible_host=34.140.85.146
+microk8s-worker-1 ansible_host=34.79.73.52
+openyurt-worker-0 ansible_host=34.79.17.233
+openyurt-worker-1 ansible_host=34.140.81.85
+
+[microk8s]
+microk8s-master ansible_host=34.146.141.246
+microk8s-worker-0 ansible_host=34.79.161.247
+microk8s-worker-1 ansible_host=34.79.73.52
+
+[k3s]
+k3s-master ansible_host=34.146.56.210
+k3s-worker-0 ansible_host=34.142.45.109
+k3s-worker-1 ansible_host=34.142.79.184
+
+[openyurt]
+openyurt-master ansible_host=34.146.219.194
+openyurt-worker-0 ansible_host=34.79.17.233
+openyurt-worker-1 ansible_host=34.140.81.85
 
 [cloud:vars]
 kubernetes_role=master
