--- a/benchmarking/script.yml
+++ b/benchmarking/script.yml
@@ -1,4 +1,4 @@
-- hosts: cloud[0]
+- hosts: mongodb
   tasks:
   - debug: 
       msg: "Mongo DB IP {{ hostvars[inventory_hostname].ansible_host }}"
@@ -48,7 +48,7 @@
     ignore_errors: True
     register: output_collector_script 
     shell: 
-      cmd: "bash collector.sh 30 k3s {{ hostvars[inventory_hostname].ansible_host }}"
+      cmd: "bash collector.sh 30 k3s {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
       chdir: /etc/scripts
   - debug: 
       msg: "{{ output_collector_script }}" 
