--- a/benchmarking/script.yml
+++ b/benchmarking/script.yml
@@ -50,7 +50,7 @@
     ignore_errors: True
     register: output_collector_script 
     shell: 
-      cmd: "bash collector.sh 30 k3s {{ hostvars[mongodb]['ansible_default_ipv4']['address'] }}"
+      cmd: "bash collector.sh 30 k3s {{ hostvars['mongodb']['ansible_default_ipv4']['address'] }}"
       chdir: /etc/scripts
   - debug: 
       msg: "{{ output_collector_script }}" 
